[package]
name = "actix-session-sqlx-postgres"
version = "0.2.0"
edition = "2021"
authors = [
    "Christopher Kolstad <git@chriswk.no>",
    "Simon Hornby <liquidwicked64@gmail.com>",
]
description = "Actix Session Sqlx Postgres is a Sqlx Postgres implementation of the ActixSession Store trait"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.10.1"
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
sqlx = { version = "0.8.2", features = [
    "json",
    "chrono",
    "runtime-tokio",
    "time",
    "postgres",
] }
time = "0.3.36"

[dev-dependencies]
testcontainers = { version = "0.22.0" }
actix-test = "0.1.5"
actix-web = { version = "4", default_features = false, features = [
    "cookies",
    "secure-cookies",
    "macros",
] }
actix-session = { version = "0.10.1" }
